--- a/debug.html
+++ b/debug.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><head><script>window.parent.postMessage({ type: 'event', data: { url: windows.location.href } },'*');</script></head><body>
+<!DOCTYPE html><head><script>window.parent.postMessage({ type: 'event', data: { url: window.location.href } },'*');</script></head><body>
